fix pfps being mysteriously squished on comments on safari/webkit
wtf apple

--- a/scss/charla/_comments.scss
+++ b/scss/charla/_comments.scss
@@ -16,7 +16,7 @@
   }
 
   .comment-body {
-    width: 100%;
+    flex: 1;
 
     .comment-contents {
       margin-top: 0.25em;
@@ -34,6 +34,10 @@
       }
     }
   }
+}
+
+.new-comment-form {
+  flex: 1;
 }
 
 .replies {
@@ -76,10 +80,6 @@
   .profile-picture {
     width: 50px;
     height: 50px;
-  }
-
-  .new-comment-form {
-    width: 100%;
   }
 
   #comment_button, .submit-reply-button {
